--- a/css/style.scss
+++ b/css/style.scss
@@ -442,6 +442,7 @@ a:focus {
       text-align: center;
       transition: all 0.3s;
       margin: 5px 0;
+      text-decoration: none;
     }
 
     .option1 {
